--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,2 +1,5 @@
 @import "./components/card.scss";
 @import "./components/films.scss";
+@import "./components/navigation.scss";
+@import "./settings.scss";
+@import "./components/searchForm.scss";
