--- a/src/style/components/_films.scss
+++ b/src/style/components/_films.scss
@@ -1,4 +1,9 @@
 .films {
+  h1 {
+    margin-top: 200px;
+    font-size: 5vw;
+    font-family: $title-font;
+  }
   ul {
     display: flex;
     flex-wrap: wrap;
