--- a/src/style/components/_searchForm.scss
+++ b/src/style/components/_searchForm.scss
@@ -8,7 +8,7 @@
     height: 2vw;
     padding: 5px;
     border-radius: 5px;
-    color: white;
+    color: rgb(0, 0, 0);
     border: none;
   }
 }
