--- a/src/style/components/_searchForm.scss
+++ b/src/style/components/_searchForm.scss
@@ -25,6 +25,9 @@
       width: 5vw;
       min-width: 80px;
       transition: 0.2s ease-in-out;
+      &:hover {
+        cursor: pointer;
+      }
       #up {
         margin-left: 5px;
         color: rgb(0, 0, 0);
