--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -51,6 +51,22 @@
     z-index: 1;
     cursor: pointer;
   }
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(
+      to top,
+      rgb(0, 0, 0),
+      rgba(255, 255, 255, 0) 20%
+    );
+    opacity: 0.5;
+    z-index: 1;
+    border-radius: 30px;
+  }
 }
 button.added {
   background-color: rgb(129, 5, 5);
