--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -27,6 +27,20 @@
   #release {
     font-family: $body-font;
   }
+  #genres {
+    padding: 0;
+    margin: 0;
+    li {
+      background: rgb(0, 0, 47);
+      margin-right: 5px;
+      padding: 8px;
+      margin-top: 10px;
+      color: white;
+      font-family: $body-font;
+      font-size: 0.8rem;
+      border-radius: 5px;
+    }
+  }
   #synopsis {
     height: 7em;
     display: -webkit-box;
