--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,3 +3,4 @@
 @import "./components/films.scss";
 @import "./components/navigation.scss";
 @import "./components/searchForm.scss";
+@import "./components/popup.scss";
